# google_analytics_django

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  db.sqlite3  manage.py  pyproject.toml  setup.cfg  setup.py
django_project/: asgi.py  settings.py  urls.py  wsgi.py
google_analytics/: apps.py
google_analytics/templatetags/: google_analytics_tags.py
google_analytics/tests/: test_middleware.py  test_templatetags.py  test_utils.py
google_analytics_django/: asgi.py  conf.py  middleware.py  settings.py  utils.py  wsgi.py
google_analytics_django/templates/google_analytics/: analytics_gtag.html
google_analytics_django/templatetags/: google_analytics_tags.py
src/google_analytics_django/: apps.py  middleware.py  utils.py
src/google_analytics_django/templatetags/: google_analytics_tags.py
tests/: test_middleware.py  test_templatetags.py  test_utils.py
