[metadata]
name = google-analytics-django
version = 0.1
description = A Django package to integrate Google Analytics.
long_description = file: README.md
long_description_content_type = text/markdown
author = Adivhaho Mavhungu
author_email = adivhahomavhungu@outlook.com
url = https://github.com/mavhungutrezzy/google_analytics_django 
license = MIT
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
install_requires =
    Django>=5.1.2
python_requires = >=3.7

[options.package_data]
* = *.html, *.css, *.js, *.png, *.jpg, *.json, *.txt

[options.extras_require]
dev =
    black
    pre-commit
